# meshenger

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  ROADMAP.md  config.example.toml  docker-compose.yaml
.githooks/: pre-commit
.github/workflows/: publish-ghcr.yml
issues/: README.md  index.md
issues/in_progress/: ISS-20260217-traceroute-hops-to-me-path-visualization.md  ISS-20260217-traceroute-probe-cooldown-starvation.md  ISS-20260217-traceroute-session-parity-outbound-inbound.md
issues/open/: ISS-20260217-self-node-location-history-timeline.md  ISS-20260217-self-node-packet-forensics-tabs.md  ISS-20260217-self-node-protocol-quality-breakdown.md  ISS-20260217-self-node-reception-matrix.md  ISS-20260217-self-node-relay-analysis.md  ISS-20260221-log-reconnect-disconnect-events-for-db-growth-observability.md  ISS-20260221-prevent-frontend-dashboard-performance-degradation-as-db-grows.md  ISS-20260221-track-unique-active-rf-nodes-per-week-month-over-time.md
issues/rejected/: ISS-20260216-script-smoke-test-issue.md
issues/resolved/: ISS-20260216-dashboard-traceroute-requesters.md  ISS-20260216-dashboard-traceroute-traffic-tabs.md  ISS-20260216-ping-hop-display-denominator.md  ISS-20260217-add-frontend-pagination-for-dashboard-tables.md  ISS-20260217-traceroute-hops-to-me-path-visualization.md  (+3 more)
scripts/: new-issue.sh  run-meshenger-live-test.sh  run-with-web.sh
src/: bot.rs  bridge.rs  config.rs  dashboard.rs  db.rs  main.rs  message.rs  module.rs  util.rs
web/: package-lock.json  package.json  vite.config.ts
(+44 files in other folders)
