[package]
name = "meshenger"
version = "0.1.0"
edition = "2021"

[dependencies]
meshtastic = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
teloxide = { version = "0.13", features = ["macros"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
